Post Rate page is working

--- a/views/pages/postrate.ejs
+++ b/views/pages/postrate.ejs
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-
-  <% include ../partials/nav.ejs %>
-
+  <div id="result">
+    The letter will cost $0.50 to send.
+  </div>
 
 </body>
 </html>
