Make form go to correct route

--- a/views/pages/postrate.ejs
+++ b/views/pages/postrate.ejs
@@ -6,7 +6,8 @@
 
 <body>
   <div id="result">
-    The letter will cost $0.50 to send.
+    <p>Your "<%= expandMailType(type) %>" will cost $"<%= result %>" to send.</p>
+    <p>"<%= message %>"</p>
   </div>
 
 </body>
