--- a/views/pages/postrate.ejs
+++ b/views/pages/postrate.ejs
@@ -6,8 +6,8 @@
 
 <body>
   <div id="result">
-    <p>Your "<%= expandMailType(type) %>" will cost $"<%= result %>" to send.</p>
-    <p>"<%= message %>"</p>
+    <p>Your <%= type %> will cost $<%= result %> to send.</p>
+    <p><%= message %></p>
   </div>
 
 </body>
