--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,6 @@
 </head>
 
 <body>
-  <p>For the postal rate calculator, click <a href="static/getrate.html">here</a></p>.
+  <p>For the postal rate calculator, click <a href="getrate.html">here</a></p>.
 </body>
 </html>
